# stage_table_pdf

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
report/: make_pdf.py
report/process/: create_pdf.py  data.py
testapp/: __init__.py  firestore.py  make_pdf.py  views.py
testapp/process/: check.py  check_db.py  create_pdf.py  data.py
testapp/static/css/: style.css
testapp/static/javascript/: sample.js
testapp/static/output/: README.md
testapp/templates/: layout.html
testapp/templates/testapp/: form.html  form_display.html  form_display_backup.html  home.html  index.html  projects.html  sampleform.html  usage.html
